feat: rewrite get/all
