# openapi.yml
@@ -18,6 +18,17 @@ paths:
           $ref: "#/components/responses/NotFound"
         "500":
           $ref: "#/components/responses/InternalServerError"
+  /get/all:
+    get:
+      responses:
+        "200":
+          description: "Return all regisitered vocabulary list"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AllVocabularyResponse"
+        "500":
+          $ref: "#/components/responses/InternalServerError"
 components:
   responses:
     NotFound:
@@ -64,6 +75,17 @@ components:
           $ref: "#/components/schemas/Vocabulary"
       required:
         - vocabulary
+    AllVocabularyResponse:
+      properties:
+        vocabulary_list:
+          type: array
+          items:
+            $ref: "#/components/schemas/Vocabulary"
+        total_count:
+          type: integer
+      required:
+        - vocabulary_list
+        - total_count
     Error:
       type: object
       properties:
